removed the margins from the columns so that the graph doesn't have an invisible border. Also fixed some of the css for buttons and stuff.

--- a/code/static_files/style.css
+++ b/code/static_files/style.css
@@ -17,7 +17,18 @@ html, body {
 }
 
 .bookmarkBTN:hover {
-  background: #222;
+  background: #4c5e67;
+}
+
+.del {
+  background-color: #fff;
+  color: #508CA4;
+  border: none;
+  border-radius: 8px;
+  width: 30px;
+  height: 28px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 #loading {
